option('gtk_doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
option (
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default'
)
option (
  'dl_endpoint',
  type: 'string',
  value: 'https://l10n.gnome.org/api/v1/',
  description: 'Damned lies API endpoint'
)
