dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gtranslator, 0.12)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_AWK
AC_SUBST(AWK)
AC_CHECK_PROG(SED,sed,/usr/bin/sed,$PATH:/usr/local/bin)
AC_SUBST(SED)
AC_CHECK_PROG(HEAD,head,/usr/bin/head,$PATH:/usr/local/bin)
AC_SUBST(HEAD)
GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Add the languages which your application supports here.
ALL_LINGUAS="tr"
AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

PIXMAP_DIR="`gnome-config --datadir`/pixmaps"
AC_SUBST(PIXMAP_DIR)

SCRIPTS_DIR="`gnome-config --datadir`/${PACKAGE}/scripts"
AC_SUBST(SCRIPTS_DIR)

AC_OUTPUT([
Makefile
gtranslator.keys
macros/Makefile
help/Makefile
help/C/Makefile
help/tr/Makefile
prep-scripts/Makefile
prep-scripts/split_it_with_awk.sh
prep-scripts/cut_the_header.sh
prep-scripts/complex.sh
src/Makefile
intl/Makefile
po/Makefile.in
])

chmod +x prep-scripts/split_it_with_awk.sh 
chmod +x prep-scripts/cut_the_header.sh
chmod +x prep-scripts/complex.sh
