include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gtranslator
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = figures/mainwindow.png \
	      figures/toolbar.png \
	      figures/closedialog.png \
	      figures/profiles.png \
	      figures/tm.png \
	      figures/toolbar.png \
	      figures/prefs.png	\
	      figures/prefs-editor.png \
	      figures/profiles.png \
	      figures/profiles-dialog.png \
	      figures/prefs-interface.png \
	      figures/prefs-tm.png
DOC_LINGUAS = cs de el es fr gl sl th uk zh_CN

-include $(top_srcdir)/git.mk
