@YELP_HELP_RULES@
HELP_ID = gtranslator

HELP_FILES = \
	gtr-add-comment-po.page		\
	gtr-concepts.page		\
	gtr-create-tm.page		\
	gtr-custom.page			\
	gtr-edit-header.page		\
	gtr-edit-po.page		\
	gtr-faq.page			\
	gtr-goto-string-po.page		\
	gtr-join-users.page		\
	gtr-main-window.page		\
	gtr-open-po.page		\
	gtr-plugins.page		\
	gtr-profiles.page		\
	gtr-quickstart.page		\
	gtr-report-problem.page		\
	gtr-save-po.page		\
	gtr-shortcut-keys.page		\
	gtr-translate.page		\
	gtr-use-delete-entry.page	\
	gtr-wizzard.page		\
	index.page			\
	license.page

HELP_MEDIA = \
	figures/add-profile.png			\
	figures/comment-text.png		\
	figures/edit_header2.png		\
	figures/edit_header.png			\
	figures/edit-profile.png		\
	figures/edit-text.png			\
	figures/edit-toolbar.png		\
	figures/gtrans_go_to_string_menu.png	\
	figures/Gtranslator_022.png		\
	figures/Gtranslator_023.png		\
	figures/Gtranslator_025.png		\
	figures/Gtranslator_026.png		\
	figures/Gtranslator_027.png		\
	figures/gtranslator22.png		\
	figures/gtranslator32.png		\
	figures/gtranslator_interface.png	\
	figures/gtranslator-plugins.png		\
	figures/gtranslator.png			\
	figures/gtranslator_tm_strings.png	\
	figures/gtr-prefs-tm.png		\
	figures/message-detail.png		\
	figures/mover1.png			\
	figures/mover2.png			\
	figures/mover3.png			\
	figures/mover4.png			\
	figures/mover5.png			\
	figures/profiles2.png			\
	figures/tm-manager.png			\
	figures/use-tm-entry.png



HELP_LINGUAS = cs de el es eu fr gl ja pt_BR ru sl sv th uk zh_CN

-include $(top_srcdir)/git.mk
