sources = [
  'gtr-add-comment-po.page',
  'gtr-concepts.page',
  'gtr-create-tm.page',
  'gtr-custom.page',
  'gtr-edit-header.page',
  'gtr-edit-po.page',
  'gtr-faq.page',
  'gtr-goto-string-po.page',
  'gtr-join-users.page',
  'gtr-main-window.page',
  'gtr-open-po.page',
  'gtr-plugins.page',
  'gtr-profiles.page',
  'gtr-quickstart.page',
  'gtr-report-problem.page',
  'gtr-save-po.page',
  'gtr-shortcut-keys.page',
  'gtr-translate.page',
  'gtr-use-delete-entry.page',
  'gtr-wizzard.page',
  'index.page',
  'legal.xml',
  'license.page',
]

media = [
  'figures/add-profile.png',
  'figures/alt-lang.png',
  'figures/char-map.png',
  'figures/comment-text.png',
  'figures/edit-profile.png',
  'figures/edit-toolbar.png',
  'figures/goto-string-toolbar.png',
  'figures/gtrans_go_to_string_menu.png',
  'figures/gtranslator32.png',
  'figures/gtranslator_interface2.png',
  'figures/gtranslator-plugins.png',
  'figures/gtranslator_tm_strings.png',
  'figures/message-detail.png',
  'figures/profiles2.png',
  'figures/tm-manager.png',
  'figures/use-tm-entry.png',
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
)
