sources = [
  'gtr-add-comment-po.page',
  'gtr-concepts.page',
  'gtr-create-tm.page',
  'gtr-edit-header.page',
  'gtr-edit-po.page',
  'gtr-faq.page',
  'gtr-goto-string-po.page',
  'gtr-main-window.page',
  'gtr-open-po.page',
  'gtr-profiles.page',
  'gtr-quickstart.page',
  'gtr-report-problem.page',
  'gtr-save-po.page',
  'gtr-shortcut-keys.page',
  'gtr-translate.page',
  'gtr-use-delete-entry.page',
  'gtr-reserve-po.page',
  'gtr-upload-po.page',
  'gtr-wizzard.page',
  'index.page',
  'legal.xml',
  'license.page',
]

media = [
  'figures/color-8ca7ff.png',
  'figures/color-8cff8e.png',
  'figures/color-ff8c8c.png',
  'figures/Gtranslator.svg',
  'figures/gtranslator_interface2.png',
  'figures/gtranslator_tm_strings.png',
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
)
